# slidy-cli

./: Cargo.toml
src/: alg.rs  algorithm_ext.rs  args.rs  command.rs  enums.rs  main.rs  run.rs  size.rs  state.rs  util.rs
