[package]
name = "slidy-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
libc = "0.2.147"
palette = "0.7.3"
slidy = { path = "../slidy" }
svg = "0.14.0"
thiserror = "1.0.43"

[[bin]]
name = "slidy"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
