[package]
name = "slidy-cli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
libc = "^0.2"
palette = "^0.7"
slidy = { path = "../slidy" }
svg = "^0.18"
thiserror = "^2.0"

[[bin]]
name = "slidy"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false
strip = true
panic = "abort"
